2010-06-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14464: htmlArea RTE: Type of block accumulation if the block is manually selected in Safari

2010-06-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14593: Link wizard tabs have no style / Followup to #14733 (On behalf of Stanislas Rolland)

2010-06-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14705: In BE login form labels are to small (for German BE-Language)

2010-06-18  Benjamin Mack  <benni@typo3.org>

	* Followup to #14733: Improvements to Backend skin - Added updated styles for the taskcenter module

2010-06-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug ##14436: External links are prepended with current domain by RTE transformation
	* Updated htmlArea RTE version to 2.0.1

2010-06-18  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid versions to 1.2.0RC1

2010-06-18  Francois Suter  <francois@typo3.org>

	* Fixed bug #14774: Scheduler: Improve documentation with various advice for developers

2010-06-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14770: htmlArea RTE: Abbreviation dialogue not always correctly initialized

2010-06-17  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #14729: Backwards compatibility broken by disabled deprecation log

2010-06-17  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.0RC1

2010-06-17  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14577 Ext.ux.elasticTextArea causes JS errors in all version of IE (Thanks to Jo Hasenau)
	* Partly reverted #14636: Improvements to new Backend skin - reverted TCEforms styling, will be included later

2010-06-16  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14633: Nested form tag breaks editing icons and ExtJS funcitonality in the page module for IE8 users (Thanks to Jo Hasenau)
	* Fixed bug #14132: Regexp for automatic line breaks in Gifbuilder is incorrect (Thanks to Jigal van Hemert)
	* Follow-up to #14733: Improvements to Backend skin - Fixed typo